# InterpolatingEFT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
configs/: default.yaml  default4D.yaml  default4D_eps_1.5.yaml  default4D_eps_1.yaml  default4D_fast.yaml  quadratic4D.yaml
docs/source/: InterpolatingEFT.rst  conf.py  index.rst
src/: speedtest.ipynb
src/InterpolatingEFT/: __init__.py  dataLoader.py  dataSplitter.py  debug.py  debug2D.py  interpPlotting.py  interpolator.py  logger.py  main.py  plotter.py  profiler.py  rbfDiff.py  rbfSpeedTest.py  rbfSpline.py  rbfSplineFast.py  rbfSplineVec.py  toTable.py  utils.py
